# pokemon-showdown-ai

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml
src/bot/: __init__.py  max_damage.py  nash_equilibrium.py
src/config/: settings.py
src/data/: moves.json  pokedex.json  utils.py
